new phone number

--- a/contact.html
+++ b/contact.html
@@ -133,17 +133,17 @@
           <div class="col-lg-4 small-post-border">
             <i class="ti-mobile h1 text-primary"></i>
             <h5 class="font-weight-light my-3">Phone</h5>
-            0124857985320
+            085606143303
           </div>
           <div class="col-lg-4 small-post-border">
             <i class="ti-email h1 text-primary"></i>
             <h5 class="font-weight-light my-3">Email</h5>
-            demo@email.com
+            gembongangger@gmail.com
           </div>
           <div class="col-lg-4 small-post-border">
             <i class="ti-location-pin h1 text-primary"></i>
             <h5 class="font-weight-light my-3">Location</h5>
-            Dhaka, Bangladedsh
+            Pondok labu klompangan
           </div>
         </div>
       </div>
@@ -210,11 +210,11 @@
       <div class="col-lg-3 col-sm-6 mb-5">
         <h6 class="mb-4">Contact Me</h6>
         <ul class="list-unstyled">
-          <li class="mb-3"><a class="text-dark" href="tel:0124857985320"><i
-                class="ti-mobile mr-3 text-primary"></i>0124857985320</a></li>
-          <li class="mb-3"><i class="ti-location-pin mr-3 text-primary"></i>Dhaka, Bangladedsh</li>
-          <li class="mb-3"><a class="text-dark" href="mailto:demo@email.com"><i
-                class="ti-email mr-3 text-primary"></i>demo@email.com</a>
+          <li class="mb-3"><a class="text-dark" href="tel:085606143303"><i
+                class="ti-mobile mr-3 text-primary"></i>085606143303</a></li>
+          <li class="mb-3"><i class="ti-location-pin mr-3 text-primary"></i>Pondok labu klompangan</li>
+          <li class="mb-3"><a class="text-dark" href="mailto:gembongangger@gmail.com"><i
+                class="ti-email mr-3 text-primary"></i>gembongangger@gmail.com</a>
           </li>
         </ul>
       </div>
